#13 added progress to dto